--- a/main/templates/draft.html
+++ b/main/templates/draft.html
@@ -9,7 +9,7 @@
     <h1>All Drafts</h1>
     {% for post in post_list %}
         <article>
-            <h2><a href="{% url 'post:draft_detail' post.slug %}">{{ post.title }}</a></h2>
+            <h2><a href="{% url 'vault:draft_detail' post.published.year post.published.month post.published.day post.slug %}">{{ post.title }}</a></h2>
             <p>Created: {{ post.created|date:"F j, Y" }}</p>
             <p>Category: {{ post.category }}</p>
             <p>{{ post.content|truncatewords:50 }}</p>
