--- a/main/templates/post.html
+++ b/main/templates/post.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1>All Posts</h1>
-    {% for post in post_list %}
+    {% for post in posts %}
         <article>
-            <h2><a href="{% url 'post:post_detail' post.slug %}">{{ post.title }}</a></h2>
+            <h2><a href="{{post.get_unique_url}}">{{ post.title }}</a></h2>
             <p>Published: {{ post.published|date:"F j, Y" }}</p>
             <p>Category: {{ post.category }}</p>
             <p>{{ post.content|truncatewords:50 }}</p>
